--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spirng.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/dockerPractice
-spring.datasource.username=
-spring.datasource.passwordl=test123
+spring.datasource.username=docker
+spring.datasource.password=test123
+
+#server.port=8080
